# oggz

./: .appveyor.yml  .gitignore  .travis.yml  CMakeLists.txt  Makefile.am  config.cmake.in  configure.ac
cmake/: FindOgg.cmake  OggzConfig.cmake.in
doc/: Doxyfile.in  Makefile.am  oggz-chop.1  oggz-merge.1  oggz-rip.1  oggz-sort.1  oggz.1
include/oggz/: oggz_constants.h  oggz_off_t.h
src/examples/: read-io.c
src/liboggz/: dirac.c  metric_internal.c  oggz.c  oggz_auto.c  oggz_comments.c  oggz_io.c  oggz_read.c  oggz_seek.c  oggz_write.c
src/tools/: Makefile.am  mimetypes.c  oggz-comment.c  oggz-dump.c  oggz-info.c  oggz-rip.c  oggz-scan.c  oggz-validate.c  oggz.c  oggz_tools.c  oggz_tools.h  oggz_tools_vp8.h
src/tools/oggz-chop/: httpdate.c  httpdate_test.c  oggz-chop.c
win32/: liboggz.def
win32/VS2008/liboggz/: liboggz_static.vcproj
